[gd_scene load_steps=2 format=3 uid="uid://clg32qcnlpjs7"]

[ext_resource type="Script" uid="uid://bbav7713px3tk" path="res://scenes/dev/CombatTestScene.gd" id="1_vcays"]

[node name="CombatTestScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vcays")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ControlPanel" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ControlPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Player Party"

[node name="PlayerUnitList" type="ItemList" parent="HBoxContainer/ControlPanel/VBoxContainer"]
layout_mode = 2
select_mode = 1

[node name="Label2" type="Label" parent="HBoxContainer/ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Enemy Encounter"

[node name="EnemyEncounterList" type="ItemList" parent="HBoxContainer/ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="StartCombatButton" type="Button" parent="HBoxContainer/ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Start Combat"

[node name="CombatStage" type="SubViewportContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/CombatStage"]
handle_input_locally = false
render_target_update_mode = 4

[node name="CombatMountPoint" type="Node" parent="HBoxContainer/CombatStage/SubViewport"]
